--- a/ops/base/guestbook-service.yaml
+++ b/ops/base/guestbook-service.yaml
@@ -1,7 +1,7 @@
+apiVersion: v1
 kind: Service
-apiVersion: v1,
 metadata:
-  name: guestbook,
+  name: guestbook
 spec:
   selector:
     app: guestbook
