--- a/ops/base/redis-deployment.yaml
+++ b/ops/base/redis-deployment.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   replicas: 1
   selector:
-    app: redis
+    matchLabels:
+      app: redis
   template:
     metadata:
       labels:
