add name to base image to be able to change it wiht kustomize CLI

--- a/ops/base/guestbook-deployment.yaml
+++ b/ops/base/guestbook-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: guestbook
-        image: ""
+        image: guestbook-image # will be replaced by kustomize
         ports:
         - name: http-server
           containerPort: 3000
