--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           version=manual-${GITHUB_RUN_ID}
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            version=pr-${GITHUB_RUN_ID}
+            version=pr-${{ github.event.number }}
           elif [[ "${{ github.event_name }}" == "push" ]]; then
             version=$(<VERSION)
           fi
@@ -64,22 +64,22 @@ jobs:
 
       - name: Create new env for PR
         run: |
-          ./argocd-util app generate-spec guestbook-pr-${GITHUB_RUN_ID} \
+          ./argocd-util app generate-spec guestbook-pr-${{ github.event.number }} \
             --project default \
             --repo https://github.com/${{ github.repository_owner }}/guestbook-go-config \
             --path overlays/pr \
-            --dest-namespace guestbook-pr-${GITHUB_RUN_ID} \
+            --dest-namespace guestbook-pr-${{ github.event.number }} \
             --dest-server https://kubernetes.default.svc \
             --sync-policy automated \
-            --sync-option Prune=true \
-            --sync-option SelfHeal=true \
+            --auto-prune \
+            --self-heal \
             --sync-option CreateNamespace=true \
-            --kustomize-image ghcr.io/${{ github.repository_owner }}/guestbook-go:pr-${GITHUB_RUN_ID} \
-          > apps/guestbook-pr-${GITHUB_RUN_ID}.yaml
+            --kustomize-image ghcr.io/${{ github.repository_owner }}/guestbook-go:pr-${{ github.event.number }} \
+          > apps/guestbook-pr-${{ github.event.number }}.yaml
 
           git config user.email "guestbook-go-ci@example.com"
           git config user.name "guestbook-go CI"
 
-          git add apps/guestbook-pr-${GITHUB_RUN_ID}.yaml
-          git commit -m "Add new app for pr ${GITHUB_RUN_ID}"
+          git add apps/guestbook-pr-${{ github.event.number }}.yaml
+          git commit -m "Add new app for pr ${{ github.event.number }}"
           git push origin main
