--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,7 +90,7 @@ jobs:
             --kustomize-image ghcr.io/${{ github.repository_owner }}/guestbook-go:${{ needs.build-image.outputs.version }} \
           > ${app_file}
 
-          needs_commit=$(git diff-index --quiet HEAD ${app_file} || echo "true")
+          needs_commit=$(git diff --quiet HEAD ${app_file} || echo "true")
 
           if [[ "${needs_commit}" == "true" ]]; then
             git config user.email "guestbook-go-ci@example.com"
