--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
           fi
 
           echo "::set-output name=version::${version}"
-          echo "::set-output name=registry::ghcr.io/${{ github.repository_owner }}"
+          echo "::set-output name=registry::ghcr.io/franksonteotonho"
 
       - name: Build image
         env:
@@ -63,7 +63,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: ${{ github.repository_owner }}/guestbook-go-config
+          repository: franksonteotonho/guestbook-go-config
           token: ${{ secrets.CONFIG_GITHUB_TOKEN }}
 
       - name: Setup argocd-util
@@ -86,7 +86,7 @@ jobs:
 
           ./argocd-util app generate-spec \
             --file apps/${input_file_name} \
-            --kustomize-image guestbook-image=ghcr.io/${{ github.repository_owner }}/guestbook:${{ needs.build-image.outputs.version }} \
+            --kustomize-image guestbook-image=ghcr.io/franksonteotonho/guestbook:${{ needs.build-image.outputs.version }} \
           | envsubst | tee temp-app-file.yaml
           mv temp-app-file.yaml ${app_file}
 
