--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,9 @@ jobs:
     outputs:
       version: ${{ steps.variables.outputs.version }}
       registry: ${{ steps.variables.outputs.registry }}
+      env-name: ${{ steps.variables.outputs.env-name }}
+      app-name: ${{ steps.variables.outputs.app-name }}
+      app-file: ${{ steps.variables.outputs.app-file }}
 
     steps:
       - uses: actions/checkout@v2
@@ -32,8 +35,22 @@ jobs:
             version=$(<VERSION)
           fi
 
+          env_name="staging"
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            pr_number="${{ github.event.number }}"
+            env_name="pr-${pr_number:-1}"
+          fi
+
+          app_name="guestbook-${env_name}"
+          app_file="apps/${app_name}.yaml"
+
           echo "::set-output name=version::${version}"
           echo "::set-output name=registry::ghcr.io/${{ github.repository_owner }}"
+          echo "::set-output name=env-name::${env_name}"
+          echo "::set-output name=app-name::${app_name}"
+          echo "::set-output name=app-file::${app_file}"
+
+      # - uses: actions/checkout@v2
 
       - name: Build image
         env:
@@ -63,35 +80,26 @@ jobs:
         with:
           repository: ${{ github.repository_owner }}/guestbook-go-config
           token: ${{ secrets.CONFIG_GITHUB_TOKEN }}
-
-      - name: Create or update env
+      
+      - name: Create or update PR env
+        if: github.event_name == 'pull_request'
         run: |
-          env_name="staging"
-          overlay="staging"
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            env_name="pr-${{ github.event.number }}"
-            overlay="pr"
-          fi
-
-          app_name="guestbook-${env_name}"
-          app_file="apps/${app_name}.yaml"
-
-          cat <<EOF > ${app_file}
+          cat <<EOF > ${{ needs.build-image.outputs.app-file }}
           apiVersion: argoproj.io/v1alpha1
           kind: Application
           metadata:
-            name: ${app_name}
+            name: ${{ needs.build-image.outputs.app-name }}
           spec:
             destination:
-              namespace: ${app_name}
+              namespace: ${{ needs.build-image.outputs.app-name }}
               server: https://kubernetes.default.svc
             project: default
             source:
               kustomize:
                 images:
-                  - ghcr.io/${{ github.repository_owner }}/guestbook:${{ needs.build-image.outputs.version }}
-              path: overlays/${overlay}
-              repoURL: https://github.com/isouza-daitan/guestbook-go-config
+                  - ${{ needs.build-image.outputs.registry }}/guestbook
+              path: overlays/pr
+              repoURL: https://github.com/${{ github.repository_owner }}/guestbook-go-config
             syncPolicy:
               automated:
                 prune: true
@@ -100,13 +108,22 @@ jobs:
               - CreateNamespace=true
           EOF
 
-          git add ${app_file} # must add before diffing
-          needs_commit=$(git diff --quiet HEAD ${app_file} || echo "true")
+          echo ${{ needs.build-image.outputs.app-file }}
+
+      - name: Update app image
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq eval --inplace '.spec.source.kustomize.images[0] = "${{ needs.build-image.outputs.registry }}/guestbook:${{ needs.build-image.outputs.version }}"' ${{ needs.build-image.outputs.app-file }}
+
+      - name: Commit and push app file
+        run: |
+          git add ${{ needs.build-image.outputs.app-file }} # must add before diffing
+          needs_commit=$(git diff --quiet HEAD ${{ needs.build-image.outputs.app-file }} || echo "true")
 
           if [[ "${needs_commit}" == "true" ]]; then
             git config user.email "guestbook-go-ci@example.com"
             git config user.name "guestbook-go CI"
 
-            git commit -m "Add new app ${app_name}"
+            git commit -m "Update app ${{ needs.build-image.outputs.app-name }}"
             git push origin main
           fi
