track branch on config repo

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,6 +81,11 @@ jobs:
           repository: ${{ github.repository_owner }}/guestbook-go-config
           token: ${{ secrets.CONFIG_GITHUB_TOKEN }}
       
+      - name: Create PR branch on guestbook-go-config
+        if: github.event_name == 'pull_request'
+        run: |
+          git checkout ${{ github.head_ref }} || git checkout -b ${{ github.head_ref }}
+
       - name: Create or update PR env
         if: github.event_name == 'pull_request'
         run: |
@@ -95,11 +100,9 @@ jobs:
               server: https://kubernetes.default.svc
             project: default
             source:
-              kustomize:
-                images:
-                  - guestbook-image=${{ needs.build-image.outputs.registry }}/guestbook
-              path: overlays/pr
               repoURL: https://github.com/${{ github.repository_owner }}/guestbook-go-config
+              path: overlays/pr
+              targetRevision: ${{ github.head_ref }}
             syncPolicy:
               automated:
                 prune: true
@@ -113,10 +116,19 @@ jobs:
       - name: Update app image
         uses: mikefarah/yq@master
         with:
-          cmd: yq eval --inplace '.spec.source.kustomize.images[0] = "${{ needs.build-image.outputs.registry }}/guestbook:${{ needs.build-image.outputs.version }}"' ${{ needs.build-image.outputs.app-file }}
+          cmd: >-
+            yq eval
+              --inplace
+              '.spec.source.kustomize.images[0] = "guestbook-image=${{ needs.build-image.outputs.registry }}/guestbook:${{ needs.build-image.outputs.version }}"'
+              ${{ needs.build-image.outputs.app-file }}
 
       - name: Commit and push app file
         run: |
+          target_branch="main"
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            target_branch="${{ github.head_ref }}"
+          fi
+
           git add ${{ needs.build-image.outputs.app-file }} # must add before diffing
           needs_commit=$(git diff --quiet HEAD ${{ needs.build-image.outputs.app-file }} || echo "true")
 
@@ -125,5 +137,5 @@ jobs:
             git config user.name "guestbook-go CI"
 
             git commit -m "Update app ${{ needs.build-image.outputs.app-name }}"
-            git push origin main
+            git push origin ${target_branch}
           fi
