--- a/.github/workflows/check-version.yaml
+++ b/.github/workflows/check-version.yaml
@@ -20,8 +20,7 @@ jobs:
         with:
           files: VERSION
 
-      - name: Run step if any of the listed files above change
-        # if the VERSION file was not changed
+      - name: Fail if VERSION was not changed
         if: steps.changed-files-specific.outputs.any_changed != 'true'
         run: |
           echo "You must update the version in the VERSION file."
